tests/valid/stress_formatacao.lang
int a;
a = 10;

/* Comentário ignorado */
    
        
int b;      b = 20; 

printf(a + b);