tests/invalid/divisao_zero.lang
int a;
a = 10;
int b;
b = 0;
printf(a / b); // Perigo!